# nissan-gtr

./: .gitignore  README.md  pyproject.toml
src/nissan_gtr/: asgi.py  main.py
src/nissan_gtr/models/: course.py
src/nissan_gtr/routers/: courses.py
src/nissan_gtr/services/: config_service.py  course_service.py  notification_service.py
